<resources>
    <string name="app_name">Metronome Krush</string>
    <string name="txt_mode">Manual mode</string>
    <string name="btn_vibration">Vibration</string>
    <string name="btn_flash">Flash</string>
    <string name="btn_sound">Sound</string>
    <string name="txt_set_bmp">Set bpm you need below</string>
    <string name="txt_indicator">Indicator</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
</resources>
